fixed pointer on tabs and spacing issues

--- a/sass/_episodes.scss
+++ b/sass/_episodes.scss
@@ -29,21 +29,24 @@
     list-style-type: none;
     display: flex;
     .btn {
-      padding: .5rem 1.5rem 0;
+      padding: 0.5rem 1.5rem 0;
       border: 1px solid $primary-text;
       border-bottom: 1px solid transparent;
       border-top-left-radius: 5px;
       border-top-right-radius: 5px;
-      margin-right: .5rem;
-      transition: background-color .2s ease-in;
+      margin-right: 0.5rem;
+      transition: background-color 0.2s ease-in;
       @include medium-device {
-        padding: .25rem 1rem 0;
+        padding: 0.25rem 1rem 0;
         font-size: 1rem;
       }
       @include small-device {
-        padding: .25rem;
-        font-size: .75rem;
+        padding: 0.25rem;
+        font-size: 0.75rem;
       }
+    }
+    .season-tab {
+      cursor: pointer;
     }
   }
   .active {
@@ -75,7 +78,7 @@
 .episode-season-heading {
   font-size: 2rem;
   font-weight: $regular;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
   @include medium-device {
     font-size: 1.5rem;
   }
@@ -94,9 +97,9 @@
   border-radius: 10px;
   margin-right: 2rem;
   margin-bottom: 2rem;
-  background-color: rgba(255, 255, 255, .1);
+  background-color: rgba(255, 255, 255, 0.1);
   overflow: hidden;
-  transition: transform .2s ease-in-out, background-color .2s ease-in-out;
+  transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
   cursor: pointer;
   figure {
     width: 300px;
@@ -110,7 +113,7 @@
     object-fit: cover;
   }
   &:hover {
-    background-color: rgba(255, 255, 255, .2);
+    background-color: rgba(255, 255, 255, 0.2);
     transform: scale(1.05);
   }
 }
@@ -120,16 +123,16 @@
 }
 
 .episode-card-title {
-  font-size: clamp(1.4rem, 0.9500rem + 2.0000vw, 2rem);
+  font-size: clamp(1.4rem, 0.95rem + 2vw, 2rem);
   font-weight: $regular;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
   a {
     text-decoration: none;
   }
 }
 
 .episode-card-season {
-  font-size: clamp(1.1rem, 0.8000rem + 1.3333vw, 1.5rem);
+  font-size: clamp(1.1rem, 0.8rem + 1.3333vw, 1.5rem);
   font-weight: $light;
 }
 
@@ -143,7 +146,7 @@
 }
 
 .listen-link {
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   display: inline-block;
   font-size: 1.3rem;
 }
